--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/retroverse/honey-heist#readme",
   "dependencies": {
     "parcel-bundler": "^1.12.4",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
