--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "query-string": "^6.13.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style": "0.0.3"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
